# sol-rust-xfer

./: .gitignore  Cargo.toml  Readme.md
src/: airdrop.rs  keygen.rs  lib.rs  transfer.rs  utils.rs
src/programs/: Turbin3_prereq.rs
