[package]
name = "sol-rust-xfer"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "1.5.3"
bs58 = "0.5.1"
dotenv = "0.15.0"
base64 = "0.22.1"
serde_json = "1.0.135"

# Use compatible Solana versions
solana-client = "1.16.0"
solana-sdk = "1.16.0"

# Use a forked or updated version of solana-idlgen that resolves the conflict
solana-idlgen = { git = "https://github.com/deanmlittle/solana-idlgen.git" }


# [[bin]]
# name = "sol-rust-xfer"
# path = "src/lib.rs"
